[package]
name = "metroidvania"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", features = ["dynamic_linking",] } # REMOVE DYNAMIC LINKING FOR DIST


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3